src/scss/Profile.css
/* Profile */
.profile{
  font-family: 'Space Grotesk', sans-serif;
  color: rgb(212, 212, 212);
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(2, 1fr);
  justify-content: space-around;
  margin: 15px;
  margin-left: 48px;
  margin-top: 104px;
  grid-template-areas: 
      "profile"
      "posts";
}

.avatar{
  justify-self: left;
  max-height: 150px;
}

.user{
  grid-area: profile;
  justify-self: left;
  display: grid;
}

.headerImageProfile{
  width: 100%;
  overflow: hidden;
  background-image: url("https://imgur.com/TkHWSVv.jpg");
}

.imageProfile{
  margin-top: -48px;
  border-radius: 50%;
  overflow: hidden;
  width: 42%;
  border: 6px var(--green) solid;
  aspect-ratio: 1 / 1;
}

.profileName{
  margin: 0 0 0 24%;
  align-self: flex-start;
}
.userName{
  margin: 0 0 0 24%;
  align-self: flex-start;
}

.profileBio{
  margin: 0;
  padding: 2px;
  font-size: 14px;
}

.userProfile{
  display: flex;
  flex-direction: column;
  justify-self: center;
  background-color: var(--green);
  max-width: 72%;
  height: 600px;
  padding-bottom: 15px;
  border-radius: 2px;
  border: 1px rgb(13, 13, 13) solid;
}

.profileImageContainer{
  width: 28%;
}

/* Create post button */
.createPostButton {
  text-shadow: 1px 1px 1px rgba(44, 44, 44, .4);
  overflow: hidden;
  text-align: center;
  color: var(--dark);
  font-size: 14px;
  padding: 7px 14px;
  background-color: rgb(207, 163, 67);
  border-radius: 8px;
  transition: all 0.3s ease;
}
.createPostButton:hover {
  background-position: right center;
  border: 2px var(--mid) outset;
  border-radius: 2px;
  color: var(--mid);
  text-decoration: none;
}

.createPost input{
  margin: 2px;
  border-radius: 8px;
}

.createPost h3{
  color: rgb(207, 163, 67);
  
}
.createPost{
  grid-area: posts;
  padding-bottom: 5px;
  border-radius: 8px;
  background: var(--green);
  width: 76%;
  max-height: 150px;
  margin: 48px 0;
  justify-self: center;
}

/* Edit Post */
.editProfileContainer{
  width: fit-content;
  margin-top: -6%;
  margin-right: 16px;
  align-self: end;
}

.editProfile{
  margin: auto;
  max-width: 100px;
  background-color: rgba(44, 44, 44, .4);
  overflow: hidden;
  color: rgb(207, 163, 67);
  border-radius: 2px;
  border: 2px rgb(207, 163, 67) solid;
  padding: 2px 6px;
  transition: all 0.3s ease;
}

.editProfile:hover{
  background: rgba(71, 71, 71, 0.7);
  border-radius: 2px;
  border: 2px var(--mid) solid;
  color: var(--mid);
}

/* Posts */
.post-list{
  grid-area: posts;
  display: flex;
  flex-flow: row-reverse;
  flex-wrap: wrap-reverse;
  justify-content: center;
  align-content: flex-start;
  max-width: 90%;
  margin: 104px 64px 64px 64px;
  padding: 15px;
  padding-bottom: 48px;
  /* background-color: var(--green);
  border-radius: 4px;
  border: 1px rgb(15, 15, 15) solid; */
}

.profile-post-list{
  grid-area: posts;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap-reverse;
  justify-content: center;
  align-content: flex-start;
  max-width: 90%;
  margin: 0 32px 64px 36px;
  padding: 14px;
  padding-bottom: 48px;
  /* background-color: var(--green);
  border-radius: 4px;
  border: 1px rgb(15, 15, 15) solid; */
}

.post-card{
  display: grid;
  grid-template-columns: 40px repeat(2, 1fr);
  grid-template-rows: 40px auto 1fr;
  grid-column-gap: 0px;
  grid-row-gap: 0px;
  color: white;
  background-color: var(--green);
  border-radius: 6px;
  width: 400px;
  margin: 10px;
  padding: 10px 0;
}

.profile-post-card{
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: auto 1fr;
  grid-column-gap: 0px;
  grid-row-gap: 0px;
  color: white;
  background-color: var(--green);
  border-radius: 6px;
  width: 400px;
  margin: 10px;
  padding: 10px 0;
}

.homePfp{
  grid-area: 1 / 1 / 2 / 2;
  margin: 0 0 0 8px;
  border-radius: 50%;
}

.postCaption{
  grid-area: 2 / 1 / 3 / 4;
  display: flex;
  flex-wrap: wrap;
  align-content: flex-start;
  align-items: flex-start;
  margin: 8px 8px 8px 0;
}

.postCaption p{
  align-content: flex-start;
  align-items: flex-start;
  margin: 0 0 0 8px;
}
.post-card p{
  grid-area: 2 / 1 / 3 / 4;
  margin: 0 0 0 8px;
  justify-self: flex-start;
  color: rgb(209, 209, 209);
}

/* Post Image */
.postImage{
  grid-area: 3 / 1 / 6 / 4;
}
.postImage img{
  max-width:100%;
  height:auto;
}

/* post username */
.postCardUsername{
  margin-left: 8px;
  grid-area: 1 / 2 / 2 / 4;
  display: flex;
  align-self: end;
}
.post-card h1{
  color: rgb(209, 209, 209);
  margin: 0 0 0 8px;
}

.postInput{
  height: 1.1rem;
  border-radius: 1px;
  background: rgba(37, 37, 37, .15);
  border: 2px var(--grey) inset;
}

